[package]
name = "remote-button"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
device_query = "1.1.3"
enigo = "0.1.3"
gethostname = "0.4.3"
rumqttc = "0.22.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"