[package]
name = "rb"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = "0.4.3"
rumqttc = "0.23.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rdev = {version = "0.5.3", features = ["serialize"]}
tokio = {version = "1", features = ["full"]}
lazy_static = "1.4.0"
toml = "0.8.8"
directories = "5.0.1"
clap = "4.4.11"
